# AccelTCP

./: LICENSE  Makefile.am  README.md  bootstrap.sh  configure.ac  init_nic.sh  load_nic.sh
apps/epproxy/: Makefile.in
apps/epproxy/config/: sample_epproxy.yaml
apps/epproxy/lib/: install_yaml.sh
apps/epproxy/src/: backend_pool.c  backend_pool.h  balance.c  balance.h  config.c  config.h  epproxy.c  epproxy.h  hash.c  hash.h  http_parser.c  http_parser.h  http_stream.h  persist.c  persist.h  util.h
apps/example/: Makefile.in  msg_server.c  msg_test.c  util.h
mtcp/src/: Makefile.in  addr_pool.c  api.c  arp.c  config.c  core.c  debug.c  dpdk_module.c  eth_in.c  eth_out.c  eventpoll.c  fhash.c  icmp.c  io_module.c  ip_in.c  ip_out.c  logger.c  netmap_module.c  nic_control.c  socket.c  tcp_in.c  tcp_out.c  tcp_send_buffer.c  tcp_stream.c  tcp_util.c  timer.c
mtcp/src/include/: addr_pool.h  config.h  eth_out.h  io_module.h  ip_in.h  ip_out.h  logger.h  mtcp.h  mtcp_api.h  nic_control.h  socket.h  splice_pool.h  stat.h  tcp_in.h  tcp_out.h  tcp_send_buffer.h  tcp_stream.h  tcp_util.h
nic/scripts/: nfp-sdk6-rte.service  pif_ctl_nfd.sh
nic/setup_teardown/: build_p4  load_p4
nic/setup_teardown/config/: default.p4cfg  mtcp.h
nic/setup_teardown/src/: dataplane.c  dataplane.p4
nic/setup_teardown/src/include/: common.h  conn_table.h  nbi_out.h  nfp_device.h  nfp_util.h  rss.h
nic/splice/: build_p4  load_p4
nic/splice/config/: default.p4cfg
nic/splice/src/: splice.c  splice.p4
nic/splice/src/include/: common.h  hash_table.h  nbi_out.h  packet_management.h  rss.h
